# ParallelizedMCTS

./: .gitignore  Makefile  README.md  aclocal.m4  config.h  configure  index.html  params.json
.svn/: wc.db
MCTS/mcts/: mcts.cpp
autom4te.cache/: output.1
book/: Makefile.in
features/.deps/: libfuego_features_a-FeBasicFeatures.Po
feguo/: config.status
feguo/features/.deps/: libfuego_features_a-FePattern.Po  (+3 more)
feguo/fuegotest/: fuego_test
feguo/gouct/: Makefile
feguo/regression/: Makefile
feguo/simpleplayers/: Makefile.am
feguo/smartgame/: Makefile
feguo/unittestmain/: Makefile.in
fuego/: .gitignore  Makefile  Makefile.in  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  cuda.mk  cudalt.py  libtool  out  out.txt  out2.txt  setup.sh
fuego/autom4te.cache/: output.2  output.3  output.4  output.6  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7
fuego/book/: Makefile  Makefile.in
fuego/features/: Makefile  Makefile.in
fuego/fuegomain/: Makefile  Makefile.in
fuego/fuegomain/.deps/: fuego-FuegoMainEngine.Po
fuego/fuegotest/: FuegoTestEngine.cpp  FuegoTestMain.cpp  FuegoTestUtil.cpp  FuegoTestUtil.h  Makefile  Makefile.am  Makefile.in  fuego_test
fuego/fuegotest/.deps/: fuego_test-FuegoTestEngine.Po
fuego/go/: GoBoard.cpp  GoBoard.h  GoBoardUtil.cpp  GoBoardUtil.h  GoGtpEngine.cpp  Makefile  Makefile.in
fuego/go/.deps/: libfuego_go_a-GoAdditiveKnowledge.Po  libfuego_go_a-GoBlock.Po  libfuego_go_a-GoBoardCheckPerformance.Po  libfuego_go_a-GoEyeUtil.Po  libfuego_go_a-GoNodeUtil.Po  libfuego_go_a-GoOpeningKnowledge.Po  libfuego_go_a-GoRegionUtil.Po  libfuego_go_a-GoSafetyUtil.Po  libfuego_go_a-GoSearch.Po  libfuego_go_a-GoStaticSafetySolver.Po
fuego/gouct/: Makefile  Makefile.in
fuego/gouct/.deps/: libfuego_gouct_a-GoUctAdditiveKnowledgeFuego.Po  libfuego_gouct_a-GoUctDefaultPriorKnowledge.Po  libfuego_gouct_a-GoUctFeatureCommands.Po  libfuego_gouct_a-GoUctFeatureKnowledge.Po  libfuego_gouct_a-GoUctObjectWithSearch.Po  libfuego_gouct_a-GoUctUtil.Po
fuego/gtpengine/: Makefile  Makefile.in
fuego/misctests/: Makefile  Makefile.in
fuego/regression/: Makefile  Makefile.in
fuego/simpleplayers/: CudaDequeue.h  CudaGo.cpp  CudaGo.cu  CudaGo.h  MCTSPlayer.cpp  MCTSPlayer.h  Makefile  Makefile.am  Makefile.in  SpUtil.cpp  SpUtil.h  deque.h  go_cuda_helper.cu  mcts.cpp  mcts.h  mcts_cuda.cpp  mcts_cuda.cu  mcts_simulation.cu  point.h
fuego/simpleplayers/.deps/: libfuego_simpleplayers_a-MCTSPlayer.Po  libfuego_simpleplayers_a-MCTSPlayer.Tpo
fuego/simpleplayers/mcts_cpu/: MCTSPlayer.cpp  MCTSPlayer.h  mcts.cpp  mcts.h
fuego/smartgame/: Makefile  Makefile.in  SgBWArray.h  SgBWSet.h  SgHash.h  SgMarker.h  SgPointSet.h  SgVector.h
fuego/smartgame/.deps/: libfuego_smartgame_a-SgBoardConst.Tpo  libfuego_smartgame_a-SgConnCompIterator.Po  libfuego_smartgame_a-SgDebug.Po  libfuego_smartgame_a-SgGameWriter.Po  libfuego_smartgame_a-SgIncrementalStack.Po  libfuego_smartgame_a-SgNbIterator.Po  libfuego_smartgame_a-SgPoint.Po  libfuego_smartgame_a-SgPointSet.Po  libfuego_smartgame_a-SgRandom.Po  libfuego_smartgame_a-SgSearchStatistics.Po  libfuego_smartgame_a-SgSystem.Po  libfuego_smartgame_a-SgTimeSettings.Po  libfuego_smartgame_a-SgUctSearch.Po  libfuego_smartgame_a-SgUctTreeUtil.Po  libfuego_smartgame_a-SgVectorUtil.Po
fuego/unittestmain/: Makefile  Makefile.in
fuegomain/: Makefile
fuegomain/.deps/: fuego-FuegoMainUtil.Po
fuegotest/: Makefile.in
fuegotest/.deps/: fuego_test-FuegoTestMain.Po
go/: Makefile
go/.deps/: libfuego_go_a-GoBoard.Po  libfuego_go_a-GoBoardHistory.Po  libfuego_go_a-GoBoardRestorer.Po  libfuego_go_a-GoBoardSynchronizer.Po  libfuego_go_a-GoBoardUpdater.Po  libfuego_go_a-GoBoardUtil.Po  libfuego_go_a-GoEyeCount.Po  libfuego_go_a-GoGame.Po  libfuego_go_a-GoGtpEngine.Po  libfuego_go_a-GoGtpExtraCommands.Po  libfuego_go_a-GoInfluence.Po  libfuego_go_a-GoKomi.Po  libfuego_go_a-GoLadder.Po  libfuego_go_a-GoMotive.Po  libfuego_go_a-GoPattern3x3.Po  libfuego_go_a-GoPlayer.Po  libfuego_go_a-GoPlayerMove.Po  libfuego_go_a-GoRegionBoard.Po  libfuego_go_a-GoRules.Po  libfuego_go_a-GoSafetySolver.Po  libfuego_go_a-GoTimeControl.Po
gouct/.deps/: libfuego_gouct_a-GoUctAdditiveKnowledgeGreenpeep.Po  libfuego_gouct_a-GoUctBoard.Po  libfuego_gouct_a-GoUctDefaultMoveFilter.Po  libfuego_gouct_a-GoUctFeatures.Po  libfuego_gouct_a-GoUctKnowledge.Po  libfuego_gouct_a-GoUctKnowledgeFactory.Po  libfuego_gouct_a-GoUctLadderKnowledge.Po  libfuego_gouct_a-GoUctMoveFilter.Po  libfuego_gouct_a-GoUctPatterns.Po  libfuego_gouct_a-GoUctSearch.Po
gtpengine/: Makefile
gtpengine/.deps/: libfuego_gtpengine_a-GtpEngine.Po  libfuego_gtpengine_a-GtpInputStream.Po  libfuego_gtpengine_a-GtpOutputStream.Po
mcts/: .gitignore  CudaGo.cu  CudaGo.h  GoBoard.cpp  GoBoard.h  Makefile  a.out  deque.h  main.cpp  mcts-simulation.cu  mcts.cpp  mcts.h  mcts_cpu.cpp  mcts_cuda.cu  point.h  sub.job  sub.job.o88097  sub.job.o88106  test.cpp
misctests/: Makefile
regression/: Makefile.in
simpleplayers/: MCTSPlayer.h  Makefile
smartgame/.deps/: libfuego_smartgame_a-SgBoardConst.Po  libfuego_smartgame_a-SgBookBuilder.Po  libfuego_smartgame_a-SgCmdLineOpt.Po  libfuego_smartgame_a-SgException.Po  libfuego_smartgame_a-SgGameReader.Po  libfuego_smartgame_a-SgGtpCommands.Po  libfuego_smartgame_a-SgGtpUtil.Po  libfuego_smartgame_a-SgInit.Po  libfuego_smartgame_a-SgMemCheck.Po  libfuego_smartgame_a-SgMiaiMap.Po  libfuego_smartgame_a-SgMiaiStrategy.Po  libfuego_smartgame_a-SgMpiSynchronizer.Po  libfuego_smartgame_a-SgNode.Po  libfuego_smartgame_a-SgPointSetUtil.Po  libfuego_smartgame_a-SgProp.Po  libfuego_smartgame_a-SgRect.Po  libfuego_smartgame_a-SgSearch.Po  libfuego_smartgame_a-SgSearchValue.Po  libfuego_smartgame_a-SgStrategy.Po  libfuego_smartgame_a-SgTime.Po  libfuego_smartgame_a-SgWrite.Po
src/: Makefile
src/go/: go.cpp  go.h
src/mcts/: mcts.cpp  mcts.h
src/test/: test.cpp
src/utils/: utils.h
test/: CudaGo.cpp  CudaGo.h  a.out  deque.h  point.h  test.cpp
unittestmain/: Makefile
(+38 files in other folders)
